--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
+authors = ["kizkoh <mac-daisuki@live.jp>"]
 name = "dupharvest"
 version = "0.1.0"
-authors = ["kizkoh <mac-daisuki@live.jp>"]
 
 [dependencies]
+chrono = "0.4.0"
+lazy_static = "0.2.8"
+
+[dependencies.pnet]
+features = [""]
+version = "0.19.0"
